kustozime/authbase.yaml
apiVersion: v1
kind: Service
metadata:
  name: authbase-svc
  namespace: rihlar
spec:
  type: LoadBalancer
  selector:
    app: rihlar-auth
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rihlar-auth
  namespace: rihlar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rihlar-auth
  template:
    metadata:
      labels:
        app: rihlar-auth
    spec:
      containers:
        - name: authbase
          image: mattuu0/authbase-auth:0.2.2
          ports:
            - containerPort: 8080
            - containerPort: 9000
          resources:
            requests:
              cpu: "100m"    # 例：100ミリコア
              memory: "128Mi"
            limits:
              cpu: "500m"    # 例：500ミリコア
              memory: "256Mi"
          volumeMounts:
            - name: assets-vol
              mountPath: /assets/icons
      volumes:
        - name: assets-vol
          persistentVolumeClaim:
            claimName: rihlar-claim
