kustozime/gcore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rihlar-gcore
  namespace: rihlar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rihlar-gcore
  template:
    metadata:
      labels:
        app: rihlar-gcore
    spec:
      containers:
        - name: rihlar-gcore
          image: ghcr.io/rihlar/rihlar_back/rihlar-gcore:latest
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: "100m"    # 例：100ミリコア
              memory: "128Mi"
            limits:
              cpu: "500m"    # 例：500ミリコア
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rihlar-gcore-svc
  namespace: rihlar
spec:
  type: LoadBalancer
  selector:
    app: rihlar-gcore
  ports:
  - port: 8090
    targetPort: 8090
