kustozime/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rihlar-redis
  namespace: rihlar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rihlar-redis
  template:
    metadata:
      labels:
        app: rihlar-redis
    spec:
      containers:
        - name: rihlar-redis
          image: redis:latest
          ports:
            - containerPort: 6379
  
---
apiVersion: v1
kind: Service
metadata:
  name: rihlar-redis-svc
  namespace: rihlar
spec:
  type: LoadBalancer
  selector:
    app: rihlar-redis
  ports:
  - port: 6379
    targetPort: 6379
