kustozime/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rihlar-user
  namespace: rihlar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rihlar-user
  template:
    metadata:
      labels:
        app: rihlar-user
    spec:
      containers:
        - name: rihlar-user
          image: ghcr.io/rihlar/rihlar_back/rihlar-user:latest
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: "100m"    # 例：100ミリコア
              memory: "128Mi"
            limits:
              cpu: "500m"    # 例：500ミリコア
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rihlar-user-svc
  namespace: rihlar
spec:
  type: LoadBalancer
  selector:
    app: rihlar-user
  ports:
  - port: 8090
    targetPort: 8090
